# sdk

./: .gitignore  Agents.md  CMakeLists.txt  CONTRIBUTING.md  PROGRESS.md  TODO.md  WORKINGON.md  build_log_2.txt
modules/compositor/: Agents.md  CMakeLists.txt  README.md  TODO.md
modules/compositor/include/: HWaylandCompositor.h  HWaylandKeyboard.h  HWaylandOutput.h  HWaylandPointer.h  HWaylandSeat.h  HWaylandSurface.h  HWaylandXdgShell.h
modules/compositor/src/: HWaylandCompositor.cpp  HWaylandKeyboard.cpp  HWaylandOutput.cpp  HWaylandPointer.cpp  HWaylandSeat.cpp  HWaylandSurface.cpp  HWaylandXdgShell.cpp
modules/compositor/src/private/: HWaylandCompositor_p.h  HWaylandKeyboard_p.h  HWaylandOutput_p.h  HWaylandPointer_p.h  HWaylandSeat_p.h  HWaylandSurface_p.h  HWaylandXdgShell_p.h
modules/data/hml/: BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Hml.g4  LICENSE  README.md
modules/data/hml/examples/: test_hml.cpp
modules/data/hml/examples/advanced/: signals-demo.hml
modules/data/hml/examples/basic/: hello-world.hml  primitives-showcase.hml
modules/data/hml/examples/components/: Button.hml
modules/data/hml/include/: HmlBaseListener.h  HmlBaseVisitor.h  HmlLexer.h  HmlListener.h  HmlParser.h  HmlVisitor.h
modules/data/hml/src/: Hml.interp  HmlBaseListener.cpp  HmlBaseVisitor.cpp  HmlLexer.cpp  HmlLexer.interp  HmlLexer.tokens  HmlListener.cpp  HmlParser.cpp  HmlVisitor.cpp
modules/graphics2d/: Agents.md  CMakeLists.txt  PROGRESS.md  README.md  TODO.md
modules/graphics2d/examples/: basic_shapes.cpp  gradients_example.cpp  paintdevice_example.cpp  paths_example.cpp  picture_example.cpp  text_rendering.cpp  transforms_example.cpp
modules/graphics2d/include/: HBrush.h  HColor.h  HFont.h  HFontMetrics.h  HGradient.h  HImage.h  HLine.h  HMargins.h  HPaintDevice.h  HPainter.h  HPainterPath.h  HPen.h  HPicture.h  HPictureRecorder.h  HPixmap.h  HPoint.h  HPointF.h  HPolygon.h  HRasterPaintDevice.h  HRect.h  HRectF.h  HRegion.h  HSize.h  HSizeF.h  HTransform.h  HVulkanPaintDevice.h
modules/graphics2d/src/: HColor.cpp  HFont.cpp  HImage.cpp  HPainter.cpp  HPainterPath.cpp  HPicture.cpp  HPictureRecorder.cpp  HPoint.cpp  HRegion.cpp  HTransform.cpp  HVulkanPaintDevice.cpp
modules/graphics2d/src/private/: HFontImpl.h  HImageImpl.h  HPainterImpl.h  HPictureImpl.h
modules/gui/: Agents.md  CMakeLists.txt  CMakeLists.txt.old  README.md  TODO.md
modules/gui/example/: basic_window.cpp
modules/gui/include/: HApplication.h  HBoxLayout.h  HEventDispatcher.h  HImageItem.h  HInput.h  HItem.h  HKeyboard.h  HLayout.h  HMouseArea.h  HObject.h  HRectangle.h  HRenderManager.h  HSceneGraph.h  HShmBuffer.h  HStateManager.h  HText.h  HWindow.h
modules/gui/src/: HApplication.cpp  HBoxLayout.cpp  HEventDispatcher.cpp  HImageItem.cpp  HItem.cpp  HKeyboard.cpp  HLayout.cpp  HMouseArea.cpp  HObject.cpp  HRectangle.cpp  HRenderManager.cpp  HSceneGraph.cpp  HShmBuffer.cpp  HStateManager.cpp  HText.cpp  HWindow.cpp  cursor_shape_stubs.c
modules/gui/src/private/: HApplication_p.h  HItem_p.h  HKeyboard_p.h  HLayout_p.h  HObject_p.h  HShmBuffer_p.h  HWindow_p.h
modules/math/: CMakeLists.txt
modules/math/include/: HMatrix3x3.h  HTransform2D.h  HVector2.h
modules/math/src/: HMatrix3x3.cpp  HTransform2D.cpp  HVector2.cpp
modules/math/tests/: main.cpp
modules/multimedia/audio/: Cargo.toml
modules/multimedia/video/: Cargo.toml
